Edit images and classes index.html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 	</head>
 
 	<body>
+		<img class="girl small" src="../images/girl.jpg">
+		<img class="boy distorted" src="../images/boy.jpg">
+		<img class="girl big" src="../images/girl.jpg">
+		<img class="boy big" src="../images/boy.jpg">
 	</body>
 </html>	
