--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	</head>
 
 	<body>
-		<img class="avatar small" src="../images/girl.jpg">
-		<img class="avatar distorted" src="../images/boy.jpg">
-		<img class="avatar big" src="../images/girl.jpg">
-		<img class="avatar big" src="../images/boy.jpg">
+		<img class="avatar small" src="./images/girl.jpg">
+		<img class="avatar distorted" src="./images/boy.jpg">
+		<img class="avatar big" src="./images/girl.jpg">
+		<img class="avatar big" src="./images/boy.jpg">
 	</body>
 </html>	
