Return . to ref or scr styles.css

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<link rel="stylesheet" href="/styles.css">
+		<link rel="stylesheet" href="./styles.css">
 		<meta charset="utf-8">
 		<title>CSS CHAINING SELECTORS</title>
 	</head>
 
 	<body>
-		<img class="avatar small" src="/images/girl.jpg">
-		<img class="avatar distorted" src="/images/boy.jpg">
-		<img class="avatar big" src="/images/girl.jpg">
-		<img class="avatar big" src="/images/boy.jpg">
+		<img class="avatar small" src="./images/girl.jpg">
+		<img class="avatar distorted" src="./images/boy.jpg">
+		<img class="avatar big" src="./images/girl.jpg">
+		<img class="avatar big" src="./images/boy.jpg">
 	</body>
 </html>	
